# obsidian-livesync-agent

./: Cargo.toml  README.md  README_es.md
.github/workflows/: release.yml
Formula/: livesync-agent.rb
deploy/: README.md  couchdb.yaml
scripts/: install-server-service.sh  install-user-service.sh  install.sh  uninstall-user-service.sh
skills/livesync-agent-install/: SKILL.md
skills/livesync-agent-install/references/: checklist.md
src/: cli.rs  config.rs  couchdb.rs  fs_scan.rs  main.rs  setup.rs  state.rs  sync_engine.rs  systemd.rs
