[package]
name = "livesync-agent"
version = "0.1.0"
edition = "2021"
description = "Headless bidirectional vault sync agent for Obsidian LiveSync-style servers"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
walkdir = "2"
